[package]
name = "clinewsapp"
version = "0.1.0"
edition = "2021"

description = "A simple cli news render app"
license = "MIT"
authors = ["giftea"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newsapi = {path = "./newsapi"}
dotenv = "0.15.0"
termimad = "0.20.2"
crossterm = "0.23.2"
